// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Terraform var file creation testing initial render 1`] = `
<div
  class="bp3-dialog dialog bp3-dialog"
  style="min-width: 700px; min-height: 600px;"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      pipelineSteps.addTerraformVarFile
    </h4>
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="Layout--vertical StyledProps--main StyledProps--padding-huge"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <div
        class="formGroup md"
      >
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="varFile.type"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="tfVarFile_varFile.type"
            >
              pipelineSteps.storeType
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-popover-wrapper Select--main bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="varFile.type"
                    placeholder="pipelineSteps.storeType"
                    style="padding-right: 0px;"
                    type="text"
                    value=""
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                      icon="caret-down"
                    >
                      <svg
                        data-icon="caret-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          caret-down
                        </desc>
                        <path
                          d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-huge"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            addFile
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            cancel
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Terraform var file creation testing removing path successfully 1`] = `
<div
  class="bp3-dialog dialog bp3-dialog"
  style="min-width: 700px; min-height: 600px;"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      pipelineSteps.addTerraformVarFile
    </h4>
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="Layout--vertical StyledProps--main StyledProps--padding-huge"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <div
        class="formGroup md"
      >
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="varFile.type"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="tfVarFile_varFile.type"
            >
              pipelineSteps.storeType
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-popover-wrapper Select--main bp3-fill"
            >
              <div
                class="bp3-popover-target bp3-popover-open"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="varFile.type"
                    placeholder="pipelineSteps.storeType"
                    style="padding-right: 0px;"
                    type="text"
                    value=""
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                      icon="caret-down"
                    >
                      <svg
                        data-icon="caret-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          caret-down
                        </desc>
                        <path
                          d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="bp3-overlay bp3-overlay-open bp3-overlay-inline"
              >
                <div
                  class="bp3-transition-container bp3-popover-appear bp3-popover-appear-active"
                  style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
                >
                  <div
                    class="bp3-popover bp3-minimal bp3-select-popover"
                  >
                    <div
                      class="bp3-popover-content"
                    >
                      <div>
                        <ul
                          class="bp3-menu"
                        >
                          <li
                            class="Select--menuItem Select--active"
                          >
                            inline
                          </li>
                          <li
                            class="Select--menuItem"
                          >
                            pipelineSteps.remoteFile
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-huge"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            addFile
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            cancel
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
